syntax = "proto3";

package tube_posts;

message PingResponse {
  string request_id = 1;
}
