syntax = "proto3";

package tube_reactions;

message PingResponse {
  string request_id = 1;
}
